--- a/services/BANK.HTML
+++ b/services/BANK.HTML
@@ -9,14 +9,14 @@
 <main class="content">
 <div class="banner">
 <h2>BANKING SERVICES</h2>
-</DIV>
+</div>
 <div class="services-grid">
-<a class="card" href="https://adhikari.spicemoney.com/dashboard/aeps?subTabType=2&serviceType=0&serviceId=0"><H4>AEPS WITHDRAW</H4></a>
-<a class="card" href="https://adhikari.spicemoney.com/dashboard/aeps?subTabType=3&serviceType=0&serviceId=0"><H4>MINI STATEMENT</H4></a>
-<a class="card" href="https://adhikari.spicemoney.com/dashboard/aeps?subTabType=5&serviceType=0&serviceId=0"><H4>BALANCE ENQUIRY</H4></a>
-<a class="card" href="https://adhikari.spicemoney.com/dashboard/aeps?subTabType=6&serviceType=0&serviceId=0"><H4>CASH DIPOSIT</H4></a
+<a class="card" href="https://adhikari.spicemoney.com/dashboard/aeps?subTabType=2&serviceType=0&serviceId=0"><h4>AEPS WITHDRAW</h4></a>
+<a class="card" href="https://adhikari.spicemoney.com/dashboard/aeps?subTabType=3&serviceType=0&serviceId=0"><h4>MINI STATEMENT</h4></a>
+<a class="card" href="https://adhikari.spicemoney.com/dashboard/aeps?subTabType=5&serviceType=0&serviceId=0"><h4>BALANCE ENQUIRY</h4></a>
+<a class="card" href="https://adhikari.spicemoney.com/dashboard/aeps?subTabType=6&serviceType=0&serviceId=0"><h4>CASH DIPOSIT</h4></a>
 
-</DIV>
-</MAIN>
-</BODY>
-</HTML>
+</div>
+</main>
+</body>
+</html>
