--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body{margin:0;font-family:Segoe UI;background:#f5f6f8}
 <a href="services/fund-transfer.html">voter service</a>
 <a href="services/balance-enquiry.html">AADHAR</a>
 <a href="https://pcc.wb.gov.in/applicant-register-login">POLICE CLEARANC CERTIFICATE</a>
-<a href="services/BANK.html">BANKING SERVICE'S</a>
+<a href="services/banking.html">BANKING SERVICE'S</a>
 
 
 
@@ -44,7 +44,7 @@ body{margin:0;font-family:Segoe UI;background:#f5f6f8}
 <a class="card" href="services/balance-enquiry.html"><H4>AADHAAR</H4></a>
 <a class="card" href="https://pcc.wb.gov.in/applicant-register-login"><H4>POLICE CLEARANC CERTIFICATE</H4></a>
 <a class="card" href="https://base.npci.org.in"><H3>AADHAR SEEDING service</H3></a>
-<a class="card" href="services/bank.html"><H3>BANKING SERVICE'S</H3></a>
+<a class="card" href="services/banking.html"><H3>BANKING SERVICE'S</H3></a>
 
 </DIV>
 </main>
