--- a/services/banking.html
+++ b/services/banking.html
@@ -15,6 +15,7 @@
 <a class="card" href="https://adhikari.spicemoney.com/dashboard/aeps?subTabType=3&serviceType=0&serviceId=0"><h4>MINI STATEMENT</h4></a>
 <a class="card" href="https://adhikari.spicemoney.com/dashboard/aeps?subTabType=5&serviceType=0&serviceId=0"><h4>BALANCE ENQUIRY</h4></a>
 <a class="card" href="https://adhikari.spicemoney.com/dashboard/aeps?subTabType=6&serviceType=0&serviceId=0"><h4>CASH DIPOSIT</h4></a>
+<a class="card" href="https://adhikari.spicemoney.com/dashboard/bbps"><h4>RECHARGE</h4></a>
 <a class="card" href="https://adhikari.spicemoney.com/dashboard/bbps"><h4>ELECTRICITY BILL PAYMENTS</h4></a>
 
 </div>
