--- a/services/banking.html
+++ b/services/banking.html
@@ -17,7 +17,7 @@
 <a class="card" href="https://adhikari.spicemoney.com/dashboard/aeps?subTabType=6&serviceType=0&serviceId=0"><h4>CASH DIPOSIT</h4></a>
 <a class="card" href="https://adhikari.spicemoney.com/dashboard/bbps"><h4>RECHARGE</h4></a>
 <a class="card" href="https://adhikari.spicemoney.com/dashboard/bbps"><h4>ELECTRICITY BILL PAYMENTS</h4></a>
-<a href="https://adhikari.spicemoney.com/dashboard/bbps">LIC PREMIUM</a>
+<a class="card" href="https://adhikari.spicemoney.com/dashboard/bbps">LIC PREMIUM</a>
 
 
 
